# puzzles

./: .gitattributes  Cargo.toml
.git-crypt/keys/default/0/: C6A1626137AABDFE1E42EC983BDEF8353501639F.gpg
adventofcode/: setup
adventofcode/aoc2022/: Cargo.toml
adventofcode/aoc2023/: Cargo.toml
adventofcode/aoc2023.hs/: .gitignore  day01.hs
common/: Cargo.toml
common/src/: grid.rs  lib.rs  math.rs  search.rs
open.kattis/: Cargo.toml  README.md  rust-toolchain.toml
open.kattis/quickscope/: quickscope.rs
