[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
glam = "*"
anyhow = "1.0"
prse = "1.1.1"
intervallum = "1.4.0"
gcollections = "1.5.0"

[lints.rust]
unused_imports = "allow"
